<resources>
    <string name="app_name">MEDISTANT BD</string>
    <string name="username">16a1c6bb-6f56-4bba-96a0-2364f42c2fa0</string>
    <string name="password">TD3LMQd1ZARo</string>
    <string name="workspace">a6d8c44e-4ee5-4712-9d7d-d253ba03c2eb</string>
    <string name="workspace2">a3e51aa8-e863-45e8-a30c-5504a7b3b0a3</string>

    <string name="ErrorLog">Please enter Email</string>
    <string name="ErrorLog2">Please enter Password</string>
    <string name="error_common">This field can not be empty</string>
    <string name="error_common2">This field can not be empty with at least 6 character </string>
    <string name="password_mismatch">Password mismatch</string>

    <string name="buttonWidth">320dp</string>
    <string name="buttonLenghth">60dp</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation Drawer part starts from here -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="Underlined_text"> <u>Forgot Password?</u></string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_Chatbot">Chatbot</string>
    <string name="nav_Specialists">Specialists list</string>
    <string name="nav_Hospitals">Nearby Hospitals</string>
    <string name="nav_Bloodbank">Nearby Bloodbank</string>
    <string name="nav_Medicine">Medicine Details</string>
    <string name="nav_Ambulance">Nearby Ambulance</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_signout">Sign Out</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Chatbot</item>
        <item>Specialists List</item>
        <item>Nearby Hospitals</item>
        <item>Nearby Ambulance</item>
        <item>Nearby Bloodbank</item>
        <item>Medicine Details</item>
        <item>Sign Out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
